--- a/package.json
+++ b/package.json
@@ -4,21 +4,45 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=route-app:* nodemon ./bin/www",
+    "dev": " nodemon ./bin/www",
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.23.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-ejs-layouts": "^2.5.0",
+    "express-layout": "^0.1.0",
+    "express-session": "^1.17.1",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.0.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saraewilcox/Route-app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/saraewilcox/Route-app/issues"
+  },
+  "homepage": "https://github.com/saraewilcox/Route-app#readme",
+  "description": ""
 }
