--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "zomato-api": "^0.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
